"By tap on return button, the cell are still selected " issue fixed.

--- a/Achievements/Achievements/Resources/Storyboards/Achievement.storyboard
+++ b/Achievements/Achievements/Resources/Storyboards/Achievement.storyboard
@@ -25,7 +25,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ImageAndDetailsTableViewCell" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ImageAndDetailsTableViewCell" rowHeight="87" id="Rfh-WV-4nc" customClass="ImageAndDetailsTableViewCell" customModule="Achievements" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="ImageAndDetailsTableViewCell" selectionStyle="none" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="ImageAndDetailsTableViewCell" rowHeight="87" id="Rfh-WV-4nc" customClass="ImageAndDetailsTableViewCell" customModule="Achievements" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="87"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rfh-WV-4nc" id="kzC-zb-Iba">
